src/components/Table/Table.scss
@use '../../../styles/mixins';
@use './variables';

#{variables.$block} {
    overflow: auto;
    position: relative;

    &__scroll-container {
        overflow: auto;
        position: relative;

        -ms-overflow-style: none;
        scrollbar-width: none;

        &::-webkit-scrollbar {
            display: none;
        }
    }

    &__horizontal-scroll-bar {
        overflow-x: auto;
        margin-top: -1px;

        &-inner {
            height: 1px;
            position: relative;

            // Safari 13 does not support transparent elements
            &::before {
                content: '';
                position: absolute;
                width: 1px;
                height: 1px;
                top: 0;
                left: 0;
                background-color: rgba(255, 255, 255, 0.01);
            }
        }

        &_sticky-horizontal-scroll {
            position: sticky;
            z-index: 3;
        }
    }

    &__table {
        border-spacing: 0;
        // fix border disappear in Firefox:
        border-collapse: separate;
    }

    &__cell {
        box-sizing: content-box;
        padding: 11px 10px;
        border-bottom: 1px solid var(--g-color-line-generic);

        line-height: variables.$tableLineHeight;
        vertical-align: top;
        text-align: left;
        overflow-wrap: break-word;

        &:first-child {
            padding-left: 0;
        }

        &:last-child {
            padding-right: 0;
        }

        &:not(&_word-wrap) {
            @include mixins.overflow-ellipsis();
        }

        &_align_center {
            text-align: center;
        }

        &_align_right {
            text-align: right;
        }

        &_sticky_left,
        &_sticky_right {
            position: sticky;
            z-index: 2;
        }

        &_sticky_left,
        &_sticky_right {
            background: var(--g-color-base-background);
        }

        &_border_right {
            border-right: 1px solid var(--g-color-line-generic);
        }

        &_edge-padding {
            &:first-child {
                padding-left: 15px;
            }

            &:last-child {
                padding-right: 15px;
            }
        }
    }

    &__row {
        &_vertical-align_top {
            vertical-align: top;
        }

        &_vertical-align_middle {
            vertical-align: middle;
        }
    }

    &__row_empty &__cell {
        text-align: center;
    }

    &__body &__row:last-child &__cell {
        border-bottom-color: transparent;
    }

    &__head &__cell {
        @include mixins.text-accent;
        &::first-letter {
            text-transform: uppercase;
        }
    }

    &__body &__row_interactive:hover {
        background-color: var(--g-color-base-simple-hover-solid);
        cursor: pointer;

        #{variables.$block}__cell_sticky_left,
        #{variables.$block}__cell_sticky_right {
            background: var(--g-color-base-simple-hover-solid);
        }
    }

    &__body &__row_disabled {
        opacity: 0.3;
    }

    &_with-primary &__body &__cell {
        color: var(--g-color-text-secondary);

        &_primary {
            color: var(--g-color-text-primary);
        }
    }

    // forcing overflow:visible so we are not breaking sticky scroll
    // (because sticky scroll relates to closest parent with overflow)
    &_with-sticky-scroll {
        overflow: visible;
    }
}

